fixed photo nav on home page text align

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -575,6 +575,7 @@ div.columnBlock, div.columnEven {
 			border-left: 2px solid $homePageBorder;
 			ul {
 				li {
+                                        text-align: left;
 					margin: 0 8px;
 				/*width: 138px;*/
 					clear:both;
